# Traitement-Image

./: .gitignore
TP1/: CMakeLists.txt  bestResult.cpp  combinaison.cpp  evaluation.cpp  main.cpp  seuilGris.cpp  sobel.cpp  test.sh
TP2/: CMakeLists.txt  CR.odt  Exercice1.txt  TP2_GIRARD_ISMAIL.tgz  astuce  configurations.txt  fastHough.cpp  hough.cpp
TP3/: CMakeLists.txt  RAPPORT.odt  fast.cpp
